--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -4,6 +4,10 @@
      body {font-family: Arial, Helvetica, sans-serif;background: url("images/back1.jpg");}
 
      /* LOGIN FORM START*/  
+
+     label{
+         font-size: 20px;
+     }
      input[type=text]{
      width: 100%;
      padding: 12px 20px;
